Astro image fix

--- a/src/components/HeroSlider.astro
+++ b/src/components/HeroSlider.astro
@@ -7,13 +7,13 @@ import '../styles/hero.css';
   <div class="swiper">
     <div class="swiper-wrapper">
       <div class="swiper-slide">
-        <div class="slide-image" style="background-image: url('/images/hero-1.jpg')"></div>
+        <div class="slide-image" style="background-image: url('/images/heroslider/hele-collectie1.jpg')"></div>
       </div>
       <div class="swiper-slide">
-        <div class="slide-image" style="background-image: url('/images/hero-2.jpg')"></div>
+        <div class="slide-image" style="background-image: url('/images/heroslider/hele-collectie2.jpg')"></div>
       </div>
       <div class="swiper-slide">
-        <div class="slide-image" style="background-image: url('/images/hero-3.jpg')"></div>
+        <div class="slide-image" style="background-image: url('/images/heroslider/hele-collectie3.jpg')"></div>
       </div>
     </div>
   </div>
