--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -7,7 +7,7 @@ import '../styles/about.css';
     <div class="about-content">
       <div class="about-image">
         <div class="image-circle">
-          <img src="/images/artist/kh.jpg" alt="Katrien van Swirlazzo" />
+          <img src="images/artist/kh.jpg" alt="Katrien van Swirlazzo" />
         </div>
       </div>
       <div class="about-text">
